app/components/pull_request_component/pull_request_component.less
@import '../../../assets/less/_variables';

pull-request {
    .pull-request {
        &:hover {
            background-color: @lightGrey;
        }

        border-bottom: 1px solid @grey;

        .row div {
            padding: 8px;
        }
    }

    &:last-child {
        .pull-request {
            border-bottom: 0;
        }
    }
}

